# -POWER-DACH

./: .gitignore  README.md  fix_producto.py  railway.json  ver_db.py  vercel.json
backend/: .env.example  .railway-env  RAILWAY_DEPLOY.md  README.md  actualizar_creatina_300g.py  agregar_preentreno_superhero.py  check_schema.py  check_tables.py  checkout_error.txt  checkout_error_details.json  corregir_imagenes_preentrenos.py  crear_admin_standalone.py  crear_usuario_test.py  debug_bcrypt_direct.py  debug_import.py  debug_import.txt  inicializar.py  init_db.py  init_local.py  init_railway_db.py  listar_admins.py  migrate_to_mysql.py  power_dach.db  proteinas.db  pyproject.toml  railway.json  requirements.txt  run.py  seed_database.py  server.py  test_bcrypt.py  test_checkout.py  test_cors.py  test_final_login.py  test_login.py  test_login_direct.py  test_register.py  test_register_cors.py  ver_admins.py  ver_categorias.py  (+6 more)
backend/backend/: agregar_creatina.py  agregar_creatina_1000g.py  agregar_creatina_600g_optimum.py  agregar_creatina_nutrex.py  agregar_creatinas_scitec_ultimate_dymatize.py  agregar_preentreno_eaa.py  agregar_preentreno_gold.py  agregar_preentreno_hot_blood.py  app.py  crear_productos.py  database.py  eliminar_duplicado.py  runner.py  schema.sql  verificar_preentrenos.py
backend/scripts/: README.md  actualizar_categorias.py  agregar_creatina.py  agregar_creatina_1000g.py  agregar_creatina_600g_optimum.py  agregar_creatina_nutrex.py  agregar_creatinas_scitec_ultimate_dymatize.py  agregar_preentreno_eaa.py  agregar_preentreno_gold.py  runner.py  (+8 more)
(+89 files in other folders)
