[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["techatlasdev <srgoqui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.38.0"
fastapi = "^0.119.0"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
cryptography = "^43.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
email-validator = "^2.2.0"
bcrypt = "3.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
requests = "^2.31.0"

[tool.poetry.scripts]
start = "backend.runner:ejecutar_api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
